--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # JWT_SECRET=my-jwt-secret
 
 PG_USER=mysql_304b_user
-PG_HOST=dpg-copmjasf7o1s73e2imig-a.oregon-postgres.render.com
+PG_HOST=dpg-copmjasf7o1s73e2imig-a
 PG_DATABASE=mysql_304b
 PG_PASSWORD=ZvV3PYTEyVihq23dMOLoayg7K5j0xeyG
 PG_PORT=5432
